# faye-earthquake

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env.example  ARCHITECTURE.md  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  earthquake.py
backend/app/routers/: earthquake.py  health.py
backend/app/schemas/: earthquake.py
backend/migrations/: env.py
backend/migrations/versions/: b4236b882e64_make_time_columns_timezone_aware.py  c3d4e5f6a7b8_add_event_id_to_earthquakes.py  d5e6f7a8b9c0_drop_altitude_from_earthquakes.py  fcbcc08101d9_create_earthquakes_table.py
backend/scripts/: scrape.py  seed.py
frontend/: nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: earthquakeApi.ts
frontend/src/pages/: Health.tsx  Map.tsx  State.tsx
